# Cola_public

./: .gitignore  ChangeLog  ColaRevisions.h  INSTALL  Makefile.in  Makefile.inc  Makefile.inc.in  __COLA__  acinclude.m4  aclocal.m4  authors.h  config.h.in  configure  configure.in
Bison/: Makefile.in  bison.cc  bison.h  configure  configure.in
Chamber/: HDCoops.cc  HDCoops.h  Makefile.in  bottom.html  chinitA.h  chinitB.h  chinitC.h  chinitO.h  chinitP.h  chlib++.h  chlib.dxx  chtest.cc  chtest2.cc  hdcInit.cc  hdcInit.h  hdcInit.l  hdcInit.y  number.cc  ohipstest.cc  oopstest.cc  vdcDispatch.cc  vdcLikelihood.cc  vdcLikelihood.h  vdcPacket.cc  vdcPacket.h  vdcPlane.cc  vdcPlane.h  vdcRegression.cc  vdcRegression.h  vdcSetup.cc  vdcSetup.h
Cindy/: Card.cc  Cindy++.h  Cindy.cc  Cindy.l  Cindy.y  CindyBase.cc  CindyCard.cc  CindyCard.h  CindyCard.l  CindyCard.y  CindyCoinc.cc  CindyCoinc.h  CindyCompiler.h  CindyDecode.cc  CindyExtract.cc  CindyInfo.cc  CindyItem.cc  CindyNode.cc  CindyNode.h  CindyStream.cc  CindyStream.h  CindyTree.cc  CindyXDR.cc  CindyXDR.h  EventDispatch.h  Makefile.in  cindy.card  cindy.dxx  header.h  inttest.c  lseektest.c  mmaptest.c  proctest.cc  stattest.c
Cindy/examples/Cindy++/: Analyse.cc  Decode.cc  ECSdecode.cc  Filter.cc  Makefile.in  PassOne.cc  configure.in
Cindy/examples/Cindy++/ab940223/: a.h  ab940223.h  b.h  detector.h  spectrometer.h  statistics.h
Cindy/examples/Cindy++/pass1/: pass1.c  pass1.h
Cola/: BetheHeitler.cc  CalcPolarisation.cc  Cerenkov.cc  Cerenkov.h  Cola.cc  Cola.h  ColaNtuple.cc  ColaNtuple.h  ColaScalar.h  ConeTest.cc  ConeTest.h  Decode.cc  Elosstest.cc  ExpressionParser.y  Focus.cc  Focus.h  Functions.h  H3Tracking.cc  H3Tracking.h  KaosK.cc  KaosK.h  KaosMatrixManager.cc  KaosMatrixManager.h  Landau.tab  Lumi++.cc  LumiSum  Luminosity.cc  Luminosity.h  MWPCK.cc  MWPCK.h  Makefile.in  Masses.cc  Masses.h  Material.cc  Material.h  Momentumdistribution.h  PCAManager.cc  PCAManager.h  Parsermain.cc  PedestalCalibration.cc  (+53 more)
ColaIASA/: Decode.cc  EPICS2Cindy.cc  Makefile.in  getdate.y
ColaJLab/: Coda2Cindy.cc  Cola.cc  Cola.h  Decode.cc  Digitizer.cc  Digitizer.h  HallAfile.cc  HallAfile.h  HallAtest.cc  Makefile.in  ReadRundb.cc  StatPage.cc  StatPage.h  VDCraw.cc  VDCraw.h  codafile.cc  codafile.h  codatest.cc  rund.cc  rundatabase.h
ColaMIT/: Cola.cc  Cola.h  Decode.cc  Filter.cc  Focus.cc  Focus.h  HDCextract.cc  HDCraw.cc  HDCraw.h  HELcheck.cc  Landau_g.cc  Lumi.cc  Luminosity.cc  Luminosity.h  Makefile.in  OOPStape.cc  OOPStape.h  Q2Cindy.cc  Radiation.cc  Radiation.h  SQL.cc  Simul.h  StatPage.cc  StatPage.h  Statistic.cc  StripChart.cc  StripChart.l  StripChart.y  TCCC.cc  TCCC.h  Targetlength.cc  Targetlength.h  UniqRunDB.cc  UniqRunDB.h  UniqRunDB.l  UniqRunDB.y  VDCraw.cc  VDCraw.h  fclient.f  fpu.h  (+11 more)
Detector/: BaselNdet.cc  BaselNdet.h  FibreDetector.cc  FibreDetector.h  FibreEventDisplay.cc  FibreEventDisplay.h  FlashADC.cc  FlashADC.h  KaosDetectors.cc  KaosDetectors.h  KaosMultiTrack.cc  KaosMultiTrack.h  MWPCDetectors.cc  MWPCDetectors.h  Makefile.in  NCube.cc  NCube.h  Ndet.cc  Ndet.h  ScintD.cc  ScintD.h  SiDetectorCalibration.cc  SiDetectorCalibration.h  SiDetectorProton.cc  SiliconDetector.cc  SiliconDetector.h  detectorBase.h  fitspline.cc  fitspline.h  pdcD.cc  pdcD.h  simplex.cc  spline.cc  spline.h
Doc/: ChangeLog  LICENSE  Makefile.in  README  binToC.in  commit.sh  configure  configure.in
Doc/doc/: FAQ.dxx  doc.dxx  reference.dxx
Doc/src/: McDArray.h  McDirectory.cpp  McDirectory.h  McHandable.h  McHashTable.cpp  McHashTable.h  McSorter.h  McString.h  McWildMatch.cpp  McWildMatch.h  classgraph.cpp  classgraph.hh  cpp.l  datahashtable.hh  doc.l  doc2tex.l  docify.l  html.cpp  java.l  main.cpp  nametable.cpp  nametable.hh  readfiles.l  tex2gif.cpp
Flex/: Makefile.in  ccl.c  configure  configure.in  dfa.c  ecs.c  flexdef.h  flexskel.cc  flexskel.h  gen.c  initscan.c  libmain.c  main.c  misc.c  nfa.c  parse.y  scan.l  sym.c  tblcmp.c  testscan.c  yylex.c
FourVector/: FourVector.cc  FourVector.h  FourVector.sgml  FourVectorEloss.cc  Landau.cc  Landau.h  Makefile.in  Multiple.cc  Multiple.h  Rand.h  SimFourVector.cc  Spinor.cc  sim4vec.cc  test4vec.cc  testLandau.cc  testMultiple.cc
HBook/: HBook.cc  HBook.h  Makefile.in  ascii2ntuple.cc  exp.cc  hbook.f  hmap.cc  hserver.f  htest.cc  landau.cc  ntest.cc  ntuple.f  pawlogon.kumac
HMBook/: BitmapPanel.cc  Functions.h  HMFit.c  Makefile.in  bfgs.c  evaluate.h  fitting.c  fitting.h  hm.c  hm2hbook.cc  hm2root.cc  hmbook.c  hmbook.h  hmcat.cc  hmcatw.cc  hmcolor.h  hmdiff.cc  hmdir.cc  hmdir.h  hmdirmain.cc  hmdiv.cc  hmfitold.c  hminter.y  hmmodule.c  hmplot.c  hmplot.h  hmplot3d.c  hmplot_prolog.h  hmrandom.c  hmscan.l  hmscan.y  hmsub.cc  hmview.cc  hmview.h  hmview.icon  invert.c  pchisq.c  setup.py.in  simplex.c  test.c  (+2 more)
Model/: ChPT_VCS.cc  ChPT_VCS.h  ChPTpwaves.cc  ChPTswaves.cc  DeuteronBreakup.cc  IntL.h  Makefile.in  Model.cc  Model.h  chpttest.cc  emkhyp.for  emkhypsub.for  emkhyptest.cc  etatest.cc  kmaid.f  kmaidtest.cc  maid2000.F  maid2001.F  maidcall.f  maidtest.cc
Printlog/: Makefile.in  Printlog.cc  Printmezzo.cc  rundb-setup
Simulation/: BicubicInterpolation.cc  BicubicInterpolation.h  BicubicTest.cc  CK_RungeKutta.cc  Colli.cc  Colli.h  DM_QED.cc  DSpectrometer.h  DSpectrometerA.cc  DSpectrometerB.cc  DSpectrometerKAOS.cc  Dipol.cc  DispersionRelation.cc  FFtest.cc  Formfactor.h  Generate.cc  Generate.h  GridInterpolation.cc  GridInterpolation.h  ISRFit.cc  Inclusive.cc  KAOSfield.cc  KAOSfield.h  Magnets.h  Makefile.in  PWIA.h  QED.h  SimDecay.cc  SimDecay.h  SimDecay_wrapper.cc  SimParticle.cc  SimParticle.h  SpecA.h  TriplePol.cc  TriplePol.h  deForestCC1.cc  gridtrace.cc  he3_totren.tab  qspin.cc  qspinColli.cc  (+22 more)
TMA/: FastTM.cc  FastTM.h  Makefile.in  SplineTM.cc  SplineTM.h  TraceMachine.c  TraceMachine.h  TraceMachine.txt  TraceMachineC.cc  TraceMachineF.c  baseTM.cc  baseTM.h  ftmInit.cc  ftmInit.h  ftmInit.l  ftmInit.y  ftmTest.cc  kinkor.c  transandlook.cc  transandlook.h  utils.h
dmaini/: bundle.c  (+40 more)
(+394 files in other folders)
