dnl Process this file with autoconf to produce a configure script.
AC_INIT(reduce.c)
AC_SUBST(ARCH)
AC_SUBST(OPTS)
AC_ARG_ENABLE(gdb,  --enable-gdb		  compile and link with debug option,[OPTS="$OPTS -g"],[OPTS="$OPTS -O"])
AC_PREFIX_DEFAULT(/usr/local/a1)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_MINIX
AC_ISC_POSIX
AC_CONST
AC_STDC_HEADERS
AC_CHECK_HEADERS(string.h stdlib.h memory.h)
AC_CHECK_FUNCS(strerror mkstemp)
AC_ALLOCA
AC_OUTPUT(Makefile)
