dnl Process this file with autoconf to produce a configure script.
AC_INIT(initscan.c)
AC_SUBST(ARCH)
AC_SUBST(OPTS)
AC_ARG_ENABLE(gdb,  --enable-gdb		  compile and link with debug option,[OPTS="$OPTS -g"],[OPTS="$OPTS -O"])
AC_PREFIX_DEFAULT(/usr/local/a1)
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_CHECK_HEADER(strings.h, AC_DEFINE(HAVE_STRINGS_H), AC_DEFINE(USG))
AC_CHECK_FUNCS(mkstemp)
AC_OUTPUT(Makefile)
